--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
     font-family: "Titillium Web", sans-serif;
 }
  
-body{
-    background-color: #ba92ff;
+.NavEffect{
+    font-weight: 600;
 }
+
+
+
+
